--- a/assets/css/partials/14-property-map.css
+++ b/assets/css/partials/14-property-map.css
@@ -124,7 +124,7 @@
     color: #4f4f4f;
     font-family: Inter, Arial, sans-serif;
     font-size: 18px;
-    font-weight: 400;
+    font-weight: 300;
     line-height: 1.35;
     margin: 30px 0 0;
     max-width: 467px;
@@ -329,7 +329,7 @@
     color: #4f4f4f;
     font-family: Inter, Arial, sans-serif;
     font-size: 18px;
-    font-weight: 400;
+    font-weight: 300;
     line-height: 1.5;
     margin: 14px 0 0;
 }
@@ -530,7 +530,7 @@
     color: #4f4f4f;
     font-family: Inter, Arial, sans-serif;
     font-size: 18px;
-    font-weight: 400;
+    font-weight: 300;
     line-height: 1.35;
     margin: 0;
 }
