--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -4676,7 +4676,7 @@ img {
 .marcan-property-concept p {
     font-family: Inter, Arial, sans-serif;
     font-size: 18px;
-    font-weight: 400;
+    font-weight: 300;
     line-height: 1.35;
     margin: 0 0 24px;
 }
@@ -5772,7 +5772,7 @@ body.is-shared-unit-scrolling::after {
     color: #4f4f4f;
     font-family: Inter, Arial, sans-serif;
     font-size: 18px;
-    font-weight: 400;
+    font-weight: 300;
     line-height: 1.35;
     margin: 30px 0 0;
     max-width: 467px;
@@ -5977,7 +5977,7 @@ body.is-shared-unit-scrolling::after {
     color: #4f4f4f;
     font-family: Inter, Arial, sans-serif;
     font-size: 18px;
-    font-weight: 400;
+    font-weight: 300;
     line-height: 1.5;
     margin: 14px 0 0;
 }
@@ -6178,7 +6178,7 @@ body.is-shared-unit-scrolling::after {
     color: #4f4f4f;
     font-family: Inter, Arial, sans-serif;
     font-size: 18px;
-    font-weight: 400;
+    font-weight: 300;
     line-height: 1.35;
     margin: 0;
 }
